homepage/02_service_homepage.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-homepage
  name: nginx-homepage
  namespace: homepage
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-homepage
  type: NodePort
