homepage/04_ingress_homepage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-homepage
  namespace: homepage
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - danielbeltejar.es
      secretName: letsencrypt
  rules:
  - host: danielbeltejar.es
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-homepage 
            port: 
              number: 80
